--- a/JenkinsFile
+++ b/JenkinsFile
@@ -29,7 +29,7 @@ pipeline {
         }
         stage("Deploy To Artifactory") {
             steps {
-                configFileProvider([configFile(fileId: 'd583ab88-2c36-49aa-b582-49c2b6cc4d05', variable: 'MAVEN_SETTINGS')]) {
+                configFileProvider([configFile(fileId: 'a66ce280-dcb1-43cd-b15e-04c01d3af6e', variable: 'MAVEN_SETTINGS')]) {
                     sh '''
                     mvn deploy -s $MAVEN_SETTINGS
                     '''
