--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
                         $class: 'GitSCM',
                         branches: [[name: '*/main']],
                         userRemoteConfigs: [[
-                                                    url: 'https://github.com/Chandan-2507/sample-webapp.git, 
+                                                    url: 'https://github.com/Chandan-2507/sample-webapp.git', 
                                                     credentialsId: 'github_token'
                                             ]]
                 ])
